terraform_manifests/yamls/ingressgw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tracker-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "app.DOMAINNAME"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: usermgmt-webapp
spec:
  hosts:
  - "app.DOMAINNAME"
  gateways:
  - tracker-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: usermgmt-webapp-service
        port:
          number: 80
